# lc_sensor_grabber

./: .gitignore  build.sh  run.sh
.github/workflows/: codacy.yml  docker-image.yml  manual.yml
bluetooth_talker/: package.xml  setup.py
bluetooth_talker/bluetooth_talker/: bluetooth_talker_node.py
docker/: Dockerfile  production_entrypoint.sh  ros_entrypoint.sh
docker/lc_entrypoint_scripts/: run_server.sh  scan_assembler.sh
engine_controller/: package.xml
engine_controller/engine_controller/: engine_controller_node.py
launch_files/: CMakeLists.txt  package.xml
launch_files/launch/: assemble_scan.py  recording_launch.py
lc_interfaces/: CMakeLists.txt  package.xml
lc_interfaces/action/: StartScan.action
lc_interfaces/msg/: Angle.msg
lc_interfaces/srv/: MakeStep.srv  SetStepAngle.srv
process_launchers/: package.xml  setup.py
process_launchers/launch/: scanner_nodes.launch.py
scan_assembler/: package.xml  setup.py
scan_assembler/scan_assembler/: scan_assembler_node.py
scan_combiner/: CMakeLists.txt  package.xml
scan_combiner/src/: scan_combiner_node.cpp
scan_to_pointcloud2/: package.xml  setup.cfg  setup.py
scan_to_pointcloud2/scan_to_pointcloud2/: scan_to_pointcloud2_node.py
top_to_lidar_tf_static_publisher/: package.xml
top_to_lidar_tf_static_publisher/top_to_lidar_tf_static_publisher/: top_to_lidar_tf_static_publisher_node.py
utils/: CMakeLists.txt  package.xml  setup.py
utils/src/: LS_TO_PC2.cpp
utils/utils/: laser_projector.py
ws/bluetooth_talker/: setup.cfg
ws/draft_pc2_assembler/: CMakeLists.txt  package.xml
ws/draft_pc2_assembler/src/: draft_pc2_assembler_node.cpp
ws/engine_controller/: package.xml  setup.cfg  setup.py
ws/engine_controller/config/: engine_controller_config.yml
ws/engine_controller/engine_controller/: engine_controller_node.py
ws/install/: local_setup.sh  setup.sh
ws/install/lc_interfaces/share/lc_interfaces/: package.bash  package.zsh
ws/lc_interfaces/: CMakeLists.txt  package.xml
ws/lc_interfaces/action/: StartScan.action
ws/lc_interfaces/msg/: IsRecording.msg  PercentageDone.msg
ws/lc_interfaces/srv/: MakeScan.srv  MakeStep.srv
ws/log/: latest_build
ws/process_launchers/: package.xml  setup.cfg  setup.py
ws/process_launchers/config/: config.yml
ws/process_launchers/launch/: scanner_nodes.launch.py
ws/scan_assembler/: package.xml  setup.cfg  setup.py
ws/scan_assembler/config/: scan_assembler_config.yml
ws/scan_assembler/scan_assembler/: scan_assembler_node.py
ws/scan_to_pc_publisher/: CMakeLists.txt  package.xml
ws/scan_to_pc_publisher/src/: scan_to_pc_publisher.cpp  scan_to_pc_publisher_node.cpp
ws/top_to_lidar_tf_static_publisher/: package.xml  setup.cfg  setup.py
ws/top_to_lidar_tf_static_publisher/top_to_lidar_tf_static_publisher/: top_to_lidar_tf_static_publisher_node.py
ws/web-talker/: CMakeLists.txt  README.md  package-lock.json  package.json  package.xml
ws/web-talker/launch/: example.launch.py
ws/web_talker/: CMakeLists.txt  package-lock.json  package.json  package.xml
ws/web_talker/launch/: example.launch.py
ws/web_talker/src/: index.html  index.js
ws/web_talker/src/frontend/: vue_frontend.js
ws/web_talker/src/frontend_dist/: vue_frontend.js
ws/web_talker/src/styles/: styles.css
