<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_files</name>
  <version>0.0.0</version>
  <description>Launch files for the scanner project</description>
  <maintainer email="pawelhabrzyk@gmail.com">phabrzyk</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>octomap_server</depend>
  <depend>engine_controller</depend>
  <depend>rplidar_ros2</depend>
  <depend>scan_to_pointcloud2</depend>
  <depend>top_to_lidar_tf_static_publisher</depend>
  <depend>scan_assembler</depend>
  <depend>bluetooth_talker</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
