<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_files</name>
  <version>0.0.0</version>
  <description>Launch files for the scanner project</description>
  <maintainer email="pawelhabrzyk@gmail.com">phabrzyk</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>octomap_server</exec_depend>
  <exec_depend>engine_controller</exec_depend>
  <exec_depend>rplidar_ros2</exec_depend>
  <exec_depend>scan_to_pointcloud2</exec_depend>
  <exec_depend>top_to_lidar_tf_static_publisher</exec_depend>
  <exec_depend>scan_assembler</exec_depend>
  <exec_depend>bluetooth_talker</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
