<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>engine_controller</name>
  <version>0.0.0</version>
  <description>ros package to send current to correct pins to control stepper motor</description>
  <maintainer email="pawelhabrzyk@gmail.com">Paweł Habrzyk</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>lc_interfaces</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>RPi</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
