<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>process_launchers</name>
  <version>0.0.0</version>
  <description>Home of launch files for the project</description>
  <maintainer email="pawelhabrzyk@gmail.com">Paweł Habrzyk</maintainer>
  <license>Proprietary</license>

  <depend>engine_controller</depend>
  <depend>rplidar_ros2</depend>
  <depend>top_to_lidar_tf_static_publisher</depend>
  <depend>scan_assembler</depend>
  <depend>bluetooth_talker</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
