<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_assembler</name>
  <version>0.0.0</version>
  <description>Main node, sends requests to other nodes to create a scan</description>
  <maintainer email="pawelhabrzyk@gmail.com">Paweł Habrzyk</maintainer>
  <license>Proprietary</license>
  <depend>rclpy</depend>
  <depend>lc_interfaces</depend>
  <depend>laser_geometry</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
